fixed institution div alignment
institution header was unaligned with software header

--- a/sass/branding.sass
+++ b/sass/branding.sass
@@ -170,9 +170,9 @@ body
         .institutions
             display: flex
             flex-direction: column
+            flex-wrap: wrap
             flex: 50%
             width: 100%
-            justify-content: center
             align-items: center
             border: 1px solid $accent
             border-left: none
@@ -180,7 +180,6 @@ body
             border-bottom: none
             h1
                 text-align: center
-                padding: 0
             .inst-logo
                 display: flex
                 flex-wrap: wrap
@@ -188,14 +187,14 @@ body
                 align-items: center
                 img
                     border-radius: 100%
-                    max-width: 25%
+                    max-width: 30%
                     padding: 20px
                     height: auto
                     transition: max-width 0.5s
                 img:hover
                     filter: grayscale(0%)
                     transition: filter 0.5s
-                    max-width: 30%
+                    max-width: 35%
                     transition: max-width 0.5s
         .software
             display: flex
